@@ -38,6 +38,33 @@ class OptionMergerTest < Test::Unit::TestCase
     end
   end
 
+  def test_nested_method_with_options_containing_hashes_merge
+    with_options :conditions => { :method => :get } do |outer|
+      outer.with_options :conditions => { :domain => "www" } do |inner|
+        expected = { :conditions => { :method => :get, :domain => "www" } }
+        assert_equal expected, inner.method_with_options
+      end
+    end
+  end
+
+  def test_nested_method_with_options_containing_hashes_overwrite
+    with_options :conditions => { :method => :get, :domain => "www" } do |outer|
+      outer.with_options :conditions => { :method => :post } do |inner|
+        expected = { :conditions => { :method => :post, :domain => "www" } }
+        assert_equal expected, inner.method_with_options
+      end
+    end
+  end
+
+  def test_nested_method_with_options_containing_hashes_going_deep
+    with_options :html => { :class => "foo", :style => { :margin => 0, :display => "block" } } do |outer|
+      outer.with_options :html => { :title => "bar", :style => { :margin => "1em", :color => "#fff" } } do |inner|
+        expected = { :html => { :class => "foo", :title => "bar", :style => { :margin => "1em", :display => "block", :color => "#fff" } } }
+        assert_equal expected, inner.method_with_options
+      end
+    end
+  end
+
   # Needed when counting objects with the ObjectSpace
   def test_option_merger_class_method
     assert_equal ActiveSupport::OptionMerger, ActiveSupport::OptionMerger.new('', '').class
